--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DBHOST = 'localhost'
 DBUSER = 'root'
 DBPASSWORD = 'root'
 DBPORT = 3306
-DBDATABASE = 'railway'
+DBDATABASE = 'proyectoapi'
 HOST = 'http://localhost:'
