Corrección en las rutas para el swagger.json y readme.md

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT = 8081
-DBHOST = 'localhost'
-DBUSER = 'root'
-DBPASSWORD = 'root'
-DBPORT = 3306
-DBDATABASE = 'proyectoapi'
-HOST = 'http://localhost:'
+# PORT = 8081
+# DBHOST = 'roundhouse.proxy.rlwy.net'
+# DBUSER = 'root'
+# DBPASSWORD = 'root'
+# DBPORT = 3306
+# DBDATABASE = 'proyectoapi'
+# HOST = 'http://localhost:'
