Corrección Variables De Entorno y Puerto agregado en las conexiones a la bd

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# PORT = 8081
-# DBHOST = 'roundhouse.proxy.rlwy.net'
-# DBUSER = 'root'
-# DBPASSWORD = 'root'
-# DBPORT = 3306
-# DBDATABASE = 'proyectoapi'
-# HOST = 'http://localhost:'
+PORT = 8100
+MYSQLHOST = 'roundhouse.proxy.rlwy.net'
+MYSQLUSER = 'root'
+MYSQLPASSWORD = 'AeG5c44GC12eG13CfcgBaEHagfHBhFCH'
+MYSQLPORT = 57800
+MYSQLDATABASE = 'railway'
+HOST = 'https://proyectoapi-z488.onrender.com:'
